--- a/chingu:practice/index.html
+++ b/chingu:practice/index.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
     <style>
     .container{
-      background-color: #FFD500;
+      background-color: #00296B;
     }
     </style>
   </head>
